out is flushing